wip: не устанавливается соединение